基本样式完成 style_1

--- a/ife-beginner-5+6/resume.html
+++ b/ife-beginner-5+6/resume.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style_1.css">
     <title>简历</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>简历</h1>
+        <h2>基本信息</h2>
+        <p class="base-info">
+            <span><strong>姓名</strong>HJ</span>
+            <span><strong>性别</strong>男</span>
+            <span><strong>应聘职位</strong>Web前端工程师</span>
+        </p>
+        <h2>联系方式</h2>
+        <p class="base-info">
+            <span><strong>手机</strong>12312311231</span>
+            <span><strong>Email</strong><a href="mailto:xxxxx@1xx.com">xxxxx@1xx.com</a></span>
+            <span><strong>个人主页</strong><a href="http://github.com">Github</a></span>
+        </p>
+        <h2>能力描述</h2>
+        <p class="detail-info"><strong>技术能力</strong>熟练掌握HTML，CSS，JavaScript</p>
+        <p class="detail-info"><strong>综合能力</strong>良好的沟通</p>
+        <h2>教育经历</h2>
+        <p class="detail-info"><strong>本科</strong>辽宁大学16届，物理学院，测控技术与仪器专业</p>
+        <h2>项目经历</h2>
+        <p class="detail-info"><strong>PrimeX</strong>作为前端工程师参与了共通组件的开发</p>
+        <p class="detail-info"><strong>对日某项目</strong>作为服务端工程师参与了c#/Batch的编写</p>
+    </div>
 </body>
 </html>
