--- a/ife-beginner-7-8/index.html
+++ b/ife-beginner-7-8/index.html
@@ -18,12 +18,12 @@
         </div>
     </div>
     <div id="banner">
-        <ul>
-            <li class="banner-item">1</li>
-            <li class="banner-item">2</li>
-            <li class="banner-item">3</li>
-            <li class="banner-item">4</li>
-        </ul>
+        <div class="item-container">
+            <a href="/"><span class="banner-item">1</span></a>
+            <a href="/"><span class="banner-item">2</span></a>
+            <a href="/"><span class="banner-item">3</span></a>
+            <a href="/"><span class="banner-item">4</span></a>
+        </div>
     </div>
     <div id="tab">
         <ul>
@@ -33,17 +33,17 @@
         </ul>
     </div>
     <div id="main">
-        <div class="content"></div>
-        <div class="content"></div>
-        <div class="content"></div>
-        <div class="content"></div>
-        <div class="content"></div>
-        <div class="content"></div>
-        <div class="content"></div>
-        <div class="content"></div>
-        <div class="content"></div>
-        <div class="content"></div>
+        <div class="content">This is Content 1</div>
+        <div class="content">MaybeContent 2</div>
+        <div class="content">Content 3</div>
+        <div class="content">Content 4</div>
+        <div class="content">Content 5</div>
+        <div class="content">Content 6</div>
+        <div class="content">Content 7</div>
+        <div class="content">Content 8</div>
+        <div class="content">Content 9</div>
+        <div class="content">Content 10</div>
     </div>
-    <div id="footer"></div>
+    <div id="footer"> &copy; 2018 ife.baidu.com</div>
 </body>
 </html>
