--- a/ife-beginner-7-8/index.html
+++ b/ife-beginner-7-8/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/index.js"></script>
     <title>ife homework</title>
 </head>
 <body>
@@ -18,16 +19,20 @@
         </div>
     </div>
     <div id="banner">
+        <div id="image1" class="banner-image banner-image-active" style="background: #7d5"></div>
+        <div id="image2" class="banner-image" style="background: #356"></div>
+        <div id="image3" class="banner-image" style="background: #812"></div>
+        <div id="image4" class="banner-image" style="background: #f4f"></div>
         <div class="item-container">
-            <a href="/"><span class="banner-item">1</span></a>
-            <a href="/"><span class="banner-item">2</span></a>
-            <a href="/"><span class="banner-item">3</span></a>
-            <a href="/"><span class="banner-item">4</span></a>
+            <a class="banner-item banner-active"><span>1</span></a>
+            <a class="banner-item"><span>2</span></a>
+            <a class="banner-item"><span>3</span></a>
+            <a class="banner-item"><span>4</span></a>
         </div>
     </div>
     <div id="tab">
         <ul>
-            <li class="tab-item">HOME</li>
+            <li class="tab-item active-tab">HOME</li>
             <li class="tab-item">PROFILE</li>
             <li class="tab-item">ABORT</li>
         </ul>
