--- a/ife-beginner-5-6/resume_style3.html
+++ b/ife-beginner-5-6/resume_style3.html
@@ -27,9 +27,8 @@
                 <div class="row-header"><h2>联系方式</h2></div>
                 <div class="row-content">
                     <p>
-                        <span><strong>手机</strong>12312311231</span>
-                        <span><strong>Email</strong><a href="mailto:xxxxx@1xx.com">xxxxx@1xx.com</a></span>
-                        <span><strong>个人主页</strong><a href="http://github.com">Github</a></span>
+                        <span><strong>Email</strong><a href="mailto:p_jiangh@163.com">p_jiangh@163.com</a></span>
+                        <span><strong>个人主页</strong><a href="https://github.com/P-JIANGH">Github</a></span>
                     </p>
                 </div>
             </div>
@@ -38,8 +37,9 @@
                 <div class="row-header"><h2>能力描述</h2></div>
                 <div class="row-content">
                     <ul>
-                        <li><strong>技术能力</strong>熟练掌握HTML，CSS，JavaScript</li>
-                        <li><strong>综合能力</strong>良好的沟通</li>
+                        <li><strong>技术能力</strong>熟练掌握HTML，CSS，JavaScript等前端基础，会使用现代前端工具链。熟练使用Git版本控制工具。</li>
+                        <li><b>技术栈</b>前端开发，Java，C#（.NET Core），Python，Node.js等。</li>
+                        <li><strong>综合能力</strong>学习能力优秀，良好的沟通，一定的领导能力。</li>
                     </ul>
                 </div>
             </div>
@@ -49,7 +49,6 @@
                 <div class="row-content">
                     <ul>
                         <li><strong>本科</strong>辽宁大学16届，物理学院，测控技术与仪器专业</li>
-                        <li><strong>研究生</strong>辽宁大学16届，物理学院，测控技术与仪器专业</li>
                     </ul>
                 </div>
             </div>
